project_phase_2_initial

--- a/about_us/templates/about_us.html
+++ b/about_us/templates/about_us.html
@@ -4,11 +4,11 @@
     <h2 class="text-center my-5">نیکوکاران و اعضای خیریه‌ها</h2>
     <div class="container">
         <div class="d-flex flex-wrap justify-content-around">
-            <div>
-                {% for user in users %}
-                    {{ user.get_full_name }}
-                {% endfor %}
-            </div>
+            {% for member in members %}
+                <div id="{{ member.username }}" class="p-3">
+                    {{ member.get_full_name }}
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
